--- a/app/src/main/res/layout/post_job.xml
+++ b/app/src/main/res/layout/post_job.xml
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:background="@drawable/line"
-                    android:id="@+id/editText3"
+                    android:id="@+id/editText_designation"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:layout_below="@id/textView_work" />
@@ -107,7 +107,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Location"
                     android:layout_marginTop="5dp"
-                    android:layout_below="@id/editText3" />
+                    android:layout_below="@id/editText_designation" />
 
 
                 <ImageView
@@ -172,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="https://twitter.com/"
-                    android:id="@+id/textView_twlink"
+                    android:id="@+id/editText_twlink"
                     android:singleLine="true"
 
                     android:layout_below="@+id/textView_fblink2"
@@ -188,11 +188,11 @@
                     android:hint="Email"
                     android:singleLine="true"
                     android:inputType="textEmailAddress"
-                    android:id="@+id/textView_email"
+                    android:id="@+id/editText_mail"
 
-                    android:layout_below="@+id/textView_twlink"
-                    android:layout_alignLeft="@+id/textView_twlink"
-                    android:layout_alignStart="@+id/textView_twlink"
+                    android:layout_below="@+id/editText_twlink"
+                    android:layout_alignLeft="@+id/editText_twlink"
+                    android:layout_alignStart="@+id/editText_twlink"
                     android:layout_marginTop="5dp" />
 
                 <EditText
@@ -202,8 +202,8 @@
                     android:hint="Contact"
                     android:inputType="phone"
 
-                    android:id="@+id/textView_contact"
-                    android:layout_below="@+id/textView_email"
+                    android:id="@+id/editText_contact"
+                    android:layout_below="@+id/editText_mail"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_marginLeft="10dp"
@@ -217,7 +217,7 @@
                     android:layout_height="20dp"
                     android:id="@+id/imageView_fb"
                     android:src="@drawable/tw"
-                    android:layout_alignTop="@+id/textView_twlink"
+                    android:layout_alignTop="@+id/editText_twlink"
                     android:layout_alignLeft="@+id/textView_fblink2"
                     android:layout_alignStart="@+id/textView_fblink2"
                     android:layout_marginTop="10dp" />
@@ -226,16 +226,16 @@
                     android:layout_height="20dp"
                     android:id="@+id/imageView_tw"
                     android:src="@drawable/ph"
-                    android:layout_alignTop="@+id/textView_contact"
-                    android:layout_toLeftOf="@+id/textView_contact"
-                    android:layout_toStartOf="@+id/textView_contact"
+                    android:layout_alignTop="@+id/editText_contact"
+                    android:layout_toLeftOf="@+id/editText_contact"
+                    android:layout_toStartOf="@+id/editText_contact"
                     android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:id="@+id/imageView_in"
                     android:src="@drawable/mail"
-                    android:layout_alignTop="@+id/textView_email"
+                    android:layout_alignTop="@+id/editText_mail"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
@@ -247,7 +247,7 @@
                     android:src="@drawable/website"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView_contact"
+                    android:layout_below="@+id/editText_contact"
                     android:layout_marginTop="10dp" />
 
                 <EditText
@@ -255,10 +255,10 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/editText2"
                     android:text="www."
-                    android:layout_below="@id/textView_contact"
+                    android:layout_below="@id/editText_contact"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignLeft="@+id/textView_contact"
-                    android:layout_alignStart="@+id/textView_contact" />
+                    android:layout_alignLeft="@+id/editText_contact"
+                    android:layout_alignStart="@+id/editText_contact" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <!--<android.support.v7.widget.CardView-->
