Yet Another commit

--- a/app/src/main/res/layout/on_click_member.xml
+++ b/app/src/main/res/layout/on_click_member.xml
@@ -14,7 +14,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#d60d0d"
+            android:background="#e53935"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
     </android.support.design.widget.AppBarLayout>
