--- a/app/src/main/res/layout/activity_about_college.xml
+++ b/app/src/main/res/layout/activity_about_college.xml
@@ -17,7 +17,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view1"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="wrap_content"
         android:paddingBottom="5dp"
 
         android:layout_marginBottom="10dp"
@@ -83,7 +83,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/card_view2"
             android:layout_width="match_parent"
-            android:layout_height="760dp"
+            android:layout_height="wrap_content"
             android:paddingBottom="5dp"
 
             android:layout_marginBottom="60dp"
@@ -381,7 +381,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="1280dp"
+            android:layout_height="wrap_content"
             android:background="#000"
             card_view:cardCornerRadius="4dp"
             android:layout_marginLeft="4dp"
