--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Dummy name"
+            android:textColor="@color/cardview_dark_background"
             android:id="@+id/textView_name_profile"
             android:layout_below="@+id/imageView_profilepic"
             android:layout_centerHorizontal="true"
@@ -103,6 +104,7 @@
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Location"
                     android:layout_margin="5dp" />
@@ -197,6 +199,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Contact"
+                    android:textColor="@color/cardview_dark_background"
                     android:id="@+id/textView_fblink2"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
