--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -22,6 +22,7 @@
         android:text="Dummy Name"
         android:id="@+id/textView_name"
         android:layout_weight="0.06"
+        android:textColor="@color/cardview_dark_background"
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/profileimage"
         android:layout_toRightOf="@+id/profileimage"
