--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -122,8 +122,8 @@
                     android:id="@+id/textView_home_profile"
                     android:layout_below="@+id/info_text"
 
-                    android:layout_alignLeft="@+id/editText_location"
-                    android:layout_alignStart="@+id/editText_location"
+                    android:layout_alignLeft="@+id/editText_location6"
+                    android:layout_alignStart="@+id/editText_location6"
                     android:layout_marginTop="5dp" />
                 <View
                     android:layout_width="match_parent"
@@ -141,7 +141,7 @@
                     android:layout_height="16dp"
                     android:id="@+id/imageView_work"
                     android:src="@drawable/work"
-                    android:layout_alignTop="@+id/editText_location"
+                    android:layout_alignTop="@+id/editText_location6"
                     android:layout_alignLeft="@+id/info_text"
                     android:layout_alignStart="@+id/info_text"
                     android:layout_marginTop="2dp" />
@@ -161,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Mumbai"
-                    android:id="@+id/editText_location"
+                    android:id="@+id/editText_location6"
                     android:layout_below="@+id/textView_home_profile"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
