--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -211,8 +211,8 @@
                     android:textAppearance="?android:textAppearanceMedium"
                     android:id="@+id/ediText_home"
                     android:layout_below="@+id/info_text"
-                    android:layout_alignLeft="@+id/editText_location"
-                    android:layout_alignStart="@+id/editText_location"
+                    android:layout_alignLeft="@+id/editText_location6"
+                    android:layout_alignStart="@+id/editText_location6"
                     android:layout_marginTop="5dp" />
 
                 <ImageView
@@ -221,7 +221,7 @@
                     android:id="@+id/imageView_work"
                     android:src="@drawable/work"
                     android:padding="0dp"
-                    android:layout_alignTop="@+id/editText_location"
+                    android:layout_alignTop="@+id/editText_location6"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
@@ -239,7 +239,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText_location"
+                    android:id="@+id/editText_location6"
                     android:layout_below="@+id/ediText_home"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
