--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -19,7 +19,7 @@
         android:layout_marginRight="15dp"
         android:textColorHint="#ccc"
         android:textSize="20dp"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:textColor="#fff"
         android:paddingLeft="10dp"
         android:paddingRight="20dp"
@@ -47,7 +47,7 @@
         android:paddingRight="10dp"
         android:textSize="20dp"
         android:layout_marginTop="12dp"
-        android:inputType="text"
+        android:inputType="textPassword"
 
         android:layout_below="@+id/email"
         android:layout_alignParentLeft="true"
