--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -27,10 +27,10 @@
         />
 
     <EditText
-        android:id="@+id/Mobilenumber"
+        android:id="@+id/password"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:hint="Confirm Password"
+        android:hint="Password"
         android:layout_marginBottom="10dp"
         android:paddingStart="12dp"
         android:paddingLeft="10dp"
@@ -45,7 +45,7 @@
         android:layout_marginRight="15dp"
         android:textColorHint="#ccc"
         android:textColor="#fff"
-        android:inputType="number"
+        android:inputType="textPassword"
         android:layout_below="@+id/email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -68,16 +68,16 @@
         android:layout_marginRight="15dp"
         android:textColorHint="#ccc"
         android:textColor="#fff"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/confirm_password"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:hint="Password"
+        android:hint="Confirm Password"
         android:textSize="20dp"
         android:background="@drawable/tab_bg"
         android:drawableLeft="@drawable/password"
@@ -92,7 +92,7 @@
         android:textColorHint="#ccc"
         android:textColor="#fff"
 
-        android:inputType="text"
+        android:inputType="textPassword"
 
         android:layout_below="@+id/name"
         android:layout_alignParentLeft="true"
