--- a/app/src/main/res/layout/activity_activity_member.xml
+++ b/app/src/main/res/layout/activity_activity_member.xml
@@ -3,16 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.example.ashish.alumini.ActivityMember">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fragmentMenuContainer"
+        android:id="@+id/fragment_container"
+        android:layout_alignParentTop="true" />
 
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:name="com.example.ashish.alumini.Fragments.FragmentMenu"
-        android:id="@+id/fragment"
+        android:id="@+id/fragmentMenuContainer"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        tools:layout="@layout/menu" />
+        tools:layout="@layout/fragment_menu_bottom" />
 </RelativeLayout>
