--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
-        android:paddingRight="5dp"
-        android:layout_above="@+id/include">
+        android:paddingRight="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -331,18 +330,6 @@
 
         </RelativeLayout>
     </ScrollView>
-
-
-
-    <include
-        layout="@layout/menu"
-        android:id="@+id/include"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </include>
 
 
 </RelativeLayout>
