--- a/app/src/main/res/layout/on_filter_click.xml
+++ b/app/src/main/res/layout/on_filter_click.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <include
-        layout="@layout/menu"
+        layout="@layout/fragment_menu_bottom"
         android:id="@+id/include"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
