--- a/app/src/main/res/layout/on_job_click.xml
+++ b/app/src/main/res/layout/on_job_click.xml
@@ -7,7 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include
-        layout="@layout/menu"
+        layout="@layout/fragment_menu_bottom"
         android:id="@+id/include"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
