--- a/app/src/main/res/layout/activity_activity_member.xml
+++ b/app/src/main/res/layout/activity_activity_member.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ashish.alumini.ActivityMember">
+    tools:context=".activities.PostLogin.ActivityMember">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
