--- a/app/src/main/res/layout/fragment_menu_bottom.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/cardview_dark_background"
+    android:background="@color/card_background"
 
     android:weightSum="4">
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_marginTop="10dp"
             android:id="@+id/button_home"
             app:iiv_color="@android:color/black"
-            app:iiv_icon="faw-home" />
+            app:iiv_icon="faw-users" />
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
