--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -26,10 +27,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="5dp">
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-briefcase"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/work"
                         android:id="@+id/imageView2"
                         android:layout_alignTop="@+id/button_postjob"
                         android:layout_alignLeft="@+id/imageView"
@@ -54,12 +56,13 @@
                         android:layout_height="1px"
                         android:background="#a6a6a6"
                         android:layout_below="@id/button_postjob"/>
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-user"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginTop="13dp"
                         android:layout_marginLeft="10dp"
-                        android:src="@drawable/profile"
                         android:layout_alignTop="@+id/button_myprofile"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -131,7 +134,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="1px"
                         android:background="#a6a6a6"
-                        android:layout_below="@id/button_about_college"/>
+                        android:layout_below="@id/button_about_college"
+                        android:id="@+id/view11" />
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -196,87 +200,85 @@
                         android:layout_alignLeft="@+id/button_about_college"
                         android:layout_alignStart="@+id/button_about_college" />
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-facebook-square"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView6"
-                        android:src="@drawable/fb"
+
                         android:layout_below="@+id/button_myprofile"
                         android:layout_toLeftOf="@+id/button_postjob"
                         android:layout_toStartOf="@+id/button_postjob"
                         android:layout_marginTop="13dp" />
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/imageView7"
-                        android:layout_below="@+id/button_fbPage"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
-
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-bars"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView8"
-                        android:src="@drawable/menu"
-                        android:layout_alignTop="@+id/imageView7"
+
                         android:layout_alignLeft="@+id/imageView6"
                         android:layout_alignStart="@+id/imageView6"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="13dp"
+                        android:layout_below="@+id/button_fbPage" />
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-info-circle"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/info2"
+
                         android:id="@+id/imageView9"
                         android:layout_alignTop="@+id/button_about_college"
                         android:layout_toLeftOf="@+id/button_postjob"
                         android:layout_toStartOf="@+id/button_postjob"
                         android:layout_marginTop="13dp" />
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/imageView10"
-                        android:layout_below="@+id/button_about_college"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
 
-                    <ImageView
+
+                    <com.mikepenz.iconics.view.IconicsImageView                         app:iiv_color="@android:color/black" app:iiv_icon="faw-briefcase"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView11"
-                        android:src="@drawable/mail"
-                        android:layout_alignTop="@+id/imageView10"
+
+                        android:layout_below="@+id/view11"
                         android:layout_alignLeft="@+id/imageView9"
                         android:layout_alignStart="@+id/imageView9"
                         android:layout_marginTop="13dp" />
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-question-circle"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView12"
-                        android:src="@drawable/faq"
+
                         android:layout_alignTop="@+id/button_faq"
                         android:layout_alignLeft="@+id/imageView11"
                         android:layout_alignStart="@+id/imageView11"
                         android:layout_marginTop="13dp" />
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-star"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView13"
-                        android:src="@drawable/star"
+
                         android:layout_below="@+id/button_faq"
                         android:layout_alignLeft="@+id/imageView12"
                         android:layout_alignStart="@+id/imageView12"
                         android:layout_marginTop="13dp" />
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="@android:color/black"
+                        app:iiv_icon="faw-info-circle"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:id="@+id/imageView14"
-                        android:src="@drawable/info2"
+
                         android:layout_alignTop="@+id/button_contact_us"
                         android:layout_alignLeft="@+id/imageView11"
                         android:layout_alignStart="@+id/imageView11"
@@ -298,10 +300,12 @@
                     android:padding="5dp"
                     android:layout_height="wrap_content">
 
-                    <ImageView
+                    <com.mikepenz.iconics.view.IconicsImageView
+                        app:iiv_color="#ff1744"
+                        app:iiv_icon="faw-power-off"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/log_out"
+
                         android:id="@+id/imageView_logout"
                         android:layout_marginLeft="12dp"
                         android:layout_marginStart="12dp"
