--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="cardview_dark_background">#FF4081</color>
-    <color name="grey">#5c5b5c</color>
+    <color name="grey">#a39c9d</color>
+    <color name="appTheme">#e53935</color>
 
 
 </resources>
