Changed to Fragments, Layouts remaining

--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -127,6 +127,7 @@
                     android:layout_height="1px"
                     android:background="#a6a6a6"
                     android:layout_toEndOf="@+id/imageView_work"
+                    android:layout_toRightOf="@id/imageView_work"
                     android:layout_marginBottom="5dp"
                     android:layout_below="@+id/textView_home_profile"
                     android:layout_alignLeft="@+id/textView_home_profile"
@@ -247,6 +248,7 @@
                     android:layout_height="1px"
                     android:background="#a6a6a6"
                     android:layout_toEndOf="@+id/imageView_in"
+                    android:layout_toRightOf="@id/imageView_in"
                     android:layout_below="@+id/editText_mail"
                     android:layout_alignLeft="@+id/editText_mail"
                     android:layout_alignStart="@+id/editText_mail"
