--- a/app/src/main/res/layout/fragment_blank2.xml
+++ b/app/src/main/res/layout/fragment_blank2.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ashish.alumini.Fragments.BlankFragment">
+    tools:context=".Fragments.Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
