--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -309,7 +309,7 @@
                         android:id="@+id/imageView_logout"
                         android:layout_marginLeft="12dp"
                         android:layout_marginStart="12dp"
-                        android:layout_alignTop="@+id/button"
+                        android:layout_alignTop="@+id/button_logout"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_marginTop="13dp" />
@@ -323,7 +323,7 @@
                         android:clickable="true"
                         android:textColor="#ff1744"
                         android:layout_marginLeft="17dp"
-                        android:id="@+id/button"
+                        android:id="@+id/button_logout"
                         android:layout_toRightOf="@+id/imageView_logout"
                         android:layout_toEndOf="@+id/imageView_logout"
                         android:layout_marginStart="17dp" />
