changing of post job xml to material design, click bug removed

--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -7,11 +7,12 @@
     android:layout_marginBottom="5dp">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:id="@+id/imageView_logo"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/image"/>
@@ -26,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView_logo"
         android:layout_toEndOf="@+id/imageView_logo"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
         android:textSize="18dp" />
 
@@ -39,8 +40,7 @@
         app:iiv_color="@color/black_de"
         android:layout_alignTop="@+id/textView_joblocation"
         android:layout_alignLeft="@+id/textView_companyName"
-        android:layout_alignStart="@+id/textView_companyName"
-        android:layout_marginTop="3dp" />
+        android:layout_alignStart="@+id/textView_companyName" />
 
     <TextView
         android:layout_width="wrap_content"
