--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -198,14 +198,14 @@
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Contact"
                     android:textColor="@color/cardview_dark_background"
-                    android:id="@+id/textView_fblink2"
+                    android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="#a6a6a6"
-                    android:layout_below="@id/textView_fblink2" />
+                    android:layout_below="@id/textView_Contact" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -214,7 +214,7 @@
                     android:text="http://twitter.com/"
                     android:clickable="true"
                     android:id="@+id/editText_twlink"
-                    android:layout_below="@+id/textView_fblink2"
+                    android:layout_below="@+id/textView_Contact"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_marginTop="5dp"
@@ -292,8 +292,8 @@
                     android:id="@+id/imageView_in"
                     android:src="@drawable/mail"
                     android:layout_alignTop="@+id/editText_mail"
-                    android:layout_alignLeft="@+id/textView_fblink2"
-                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_alignLeft="@+id/textView_Contact"
+                    android:layout_alignStart="@+id/textView_Contact"
                     android:layout_marginTop="2dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
