--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -278,7 +278,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Contact"
-                    android:id="@+id/textView_fblink2"
+                    android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
@@ -291,7 +291,7 @@
                     android:id="@+id/editText_twlink"
                     android:singleLine="true"
 
-                    android:layout_below="@+id/textView_fblink2"
+                    android:layout_below="@+id/textView_Contact"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_marginLeft="10dp"
@@ -336,8 +336,8 @@
                     android:id="@+id/imageView_fb"
                     android:src="@drawable/tw"
                     android:layout_alignTop="@+id/editText_twlink"
-                    android:layout_alignLeft="@+id/textView_fblink2"
-                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_alignLeft="@+id/textView_Contact"
+                    android:layout_alignStart="@+id/textView_Contact"
                     android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
