--- a/app/src/main/res/layout/job_profile.xml
+++ b/app/src/main/res/layout/job_profile.xml
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:text="Contact"
-                    android:id="@+id/textView_fblink2"
+                    android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
 
@@ -119,7 +119,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Twitter"
                     android:id="@+id/editText_twlink"
-                    android:layout_below="@+id/textView_fblink2"
+                    android:layout_below="@+id/textView_Contact"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_margin="5dp" />
@@ -173,8 +173,8 @@
                     android:id="@+id/imageView_in"
                     android:src="@drawable/mail"
                     android:layout_alignTop="@+id/editText_mail"
-                    android:layout_alignLeft="@+id/textView_fblink2"
-                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_alignLeft="@+id/textView_Contact"
+                    android:layout_alignStart="@+id/textView_Contact"
                     android:layout_marginTop="2dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
