--- a/app/src/main/res/layout/post_job.xml
+++ b/app/src/main/res/layout/post_job.xml
@@ -26,33 +26,56 @@
                 android:orientation="vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Name of Company"
-                    />
-                <EditText
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText_com_name"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:singleLine="true"
-                    android:windowSoftInputMode="stateHidden"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_desc"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Description" />
-                <EditText
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText_com_name"
+                        android:hint="Name Of Company"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="Name of Company"-->
+                    <!--/>-->
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!---->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:layout_marginBottom="5dp"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:windowSoftInputMode="stateHidden"/>-->
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:id="@+id/textView_desc"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="Description" />-->
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="60dp"-->
+                    <!---->
+                    <!--android:layout_weight="1.05"-->
+                    <!--android:layout_marginBottom="5dp"-->
+                    <!--android:layout_marginTop="5dp" />-->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:id="@+id/Edittext_com_description"
-                    android:layout_weight="1.05"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" />
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:id="@+id/Edittext_com_description"
+                        android:hint="Description of Company"/>
+
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -73,48 +96,78 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Job Description"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:id="@+id/textView_work"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Job Description"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:id="@+id/textView_work"/>-->
 
-                <EditText
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="100dp"-->
+                    <!--android:id="@+id/editText_designation"-->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:layout_marginBottom="5dp"-->
+                    <!--android:layout_below="@id/textView_work" />-->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:id="@+id/textInputLayout_jobDescription"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
                     android:id="@+id/editText_designation"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_below="@id/textView_work" />
-                <TextView
-                    android:id="@+id/info_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Location"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/editText_designation" />
-                <ImageView
+                        android:hint="Description of Job"/>
+
+                </android.support.design.widget.TextInputLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/info_text"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="Location"-->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:layout_below="@id/textInputLayout_jobDescription" />-->
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_work"
-                    android:src="@drawable/location"
-                    android:padding="0dp"
-                    android:layout_below="@+id/info_text"
-                    android:layout_alignLeft="@+id/info_text"
-                    android:layout_alignStart="@+id/info_text"
-                    android:layout_marginTop="12dp" />
-
-                <EditText
+                    card_view:iiv_color="@color/black_de"
+                    android:src="@color/black_de"
+                    card_view:iiv_icon="faw-map-marke"
+                    android:layout_below="@+id/textInputLayout_jobDescription"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="20dp" />
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText"
-                    android:layout_below="@+id/info_text"
-                    android:layout_toRightOf="@+id/imageView_work"
-                    android:layout_toEndOf="@+id/imageView_work"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp" />
+                    android:id="@+id/view15"
+                    android:backgroundTintMode=""
+                    android:layout_below="@+id/textInputLayout_jobDescription"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignLeft="@+id/textInputLayout_jobDescription"
+                    android:layout_alignStart="@+id/textInputLayout_jobDescription">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:id="@+id/edit"
+                        android:hint="Location"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:id="@+id/editText"-->
+                    <!--android:layout_below="@+id/info_text"-->
+                    <!--android:layout_toRightOf="@+id/imageView_work"-->
+                    <!--android:layout_toEndOf="@+id/imageView_work"-->
+                    <!--android:layout_marginLeft="10dp"-->
+                    <!--android:layout_marginTop="5dp" />-->
 
 
             </RelativeLayout>
@@ -146,24 +199,26 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Contact"
-                    android:id="@+id/textView_fblink2"
+                    android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
 
                 <!-- Edit text of new twitter -->
-                <EditText
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="https://twitter.com/"
-                    android:id="@+id/editText_twlink"
-                    android:singleLine="true"
+                    android:id="@+id/textInputLayout_twitter"
+                    android:layout_below="@+id/textView_Contact">
 
-                    android:layout_below="@+id/textView_fblink2"
-                    android:layout_toRightOf="@+id/imageView_fb"
-                    android:layout_toEndOf="@+id/imageView_fb"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp" />
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText_twlink"
+                        android:hint=""/>
+
+                </android.support.design.widget.TextInputLayout>
+
 
 
                 <EditText
@@ -174,10 +229,8 @@
                     android:inputType="textEmailAddress"
                     android:id="@+id/editText_mail"
 
-                    android:layout_below="@+id/editText_twlink"
-                    android:layout_alignLeft="@+id/editText_twlink"
-                    android:layout_alignStart="@+id/editText_twlink"
-                    android:layout_marginTop="5dp" />
+                    android:layout_below="@+id/textInputLayout_twitter"
+                     android:layout_marginTop="5dp" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -202,8 +255,8 @@
                     android:id="@+id/imageView_fb"
                     android:src="@drawable/tw"
                     android:layout_alignTop="@+id/editText_twlink"
-                    android:layout_alignLeft="@+id/textView_fblink2"
-                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_alignLeft="@+id/textView_Contact"
+                    android:layout_alignStart="@+id/textView_Contact"
                     android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
